Add components and service to display teams.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-strict-di>
   <head>
-    <title>AngularJS ES6 Demo - Accounts</title>
+    <title>AngularJS ES6 Demo</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
