Add functionality to display players filtered by selected selected team.

--- a/src/client/app/app.html
+++ b/src/client/app/app.html
@@ -1,4 +1,8 @@
-<div class="container">
+<main class="container">
   <h1>AngularJS ES6 Demo</h1>
+  
   <teams></teams>
-</div>
+
+  <players></players>
+
+</main>
